--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,5 +12,6 @@ and open the template in the editor.
     </head>
     <body>
         <div>TODO write hello world</div>
+        <div>TODO write hello world ha ha</div>
     </body>
 </html>
